style.css
/* This style sheet is used to modify the apperance of the website */
/* Selects background color and padding of all pagess */
*{
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    --text-color: #232C33;
    --bg-color: #C5DCA0;
    --hover-color: white;
}
html, body {
    margin: 0;
    padding: 10px;
    box-sizing: border-box;
    color: var(--text-color);
    background-color: var(--bg-color);
  }
h1, a{
    color: var(--text-color);
}
h1{
    margin: 15px 22px;
}
/* added color to h1/title when mouse hovers it */
.header a:hover{
    color: var(--hover-color);
}
/* Allows header(title and nav bar) to stay at the top of the page */
.header{
    top: 0;
    right: 0;
    z-index: 1000;
    width: 100%;
    background-color: var(--bg-color);
    display: flex;
    padding: 27px 17%;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 10px;
}

.icon{
    display: flex;
    align-items: center;
}

.icon a{
    font-size: 1.3rem;
    color: var(--text-color);
    margin-right: 18px;
    margin-left: 5px;
    transition: all .50s ease;
}

/* Selects spacing of content in containers */
.container{
    background-color: var(--bg-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 5px 20px 0 20px;
}
/* Selects spacing of content in box class */
.container .box{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
/* Adds columns to box class */
.container .box .gallery{
    display: flex;
    flex-direction: column;
    width: 32.5%;
}
/* Allows all images to have the same size in the columns */
.container .box .gallery img{
    width: 100%;
    padding-bottom: 15px;
    border-radius: 5px;
}


.nav {
    margin: 15px 22px;
    display: flex;
    font-size: 20px;
}
/* Items on the nav bar will be spaced out by 14px */
.nav li{
    padding: 14px;
}

.nav a:hover{
    color: var(--hover-color);
}
#insta-icon{
    font-size: 2rem;
    color: var(--text-color);
}
#insta-icon:hover{
    color: var(--hover-color);
}
#menu-icon{
    color: var(--text-color);
    font-size: 2rem;
    cursor: pointer;
    z-index: 10001;
    display: none;
}
/* Removes dots from nav bar list */
ul {
    list-style-type: none;
    margin: 28;
    padding: 0;
  }
/* Listed items will be aligned to the left */
li {
    float: left;
    display: block;
}

/* Allows links and text to be on the same line when displayed on page */
a {
    display: inline-block;
    text-decoration: none;
}

/* Selects spacing and alignment of content/text in the contact page */
  .contact{
    display:flex;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    text-align: left;
    margin: 0px 20px 0 25px;
    padding-bottom: 40px;
  }
/* Selects spacing and alignment of content/text in the bio page */
 .bio{
    display:flex;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    text-align: left;
    margin: 0px 20px 0 25px;
    padding-bottom: 40px;
  }

/* 648 Ensures you only have one column of photos on breakpoint/small screen view */
@media only screen and (max-width: 1050px){
    .container .box{
        flex-direction: column;
    }

    .container .box .gallery{
        width: 100%;
    }
    
    #menu-icon{
        display: block;
        font-size: 40px;
    }

    .nav{
        position:fixed;
        width: 100%;
        height: 100vh;
        padding: 50px 60px;
        top: 0;
        bottom: 0;
        left: 100%;
        right: 0;
        display: flex;
        flex-direction: column;
        background: var(--bg-color);
        transition: all .50s ease;
    }

    .nav a{
        display: block;
        color: var(--text-color);
        padding: 10;
        margin: 0px 0px 40px 0px;
        font-size: 2.2rem;
        font-weight: 400;
    }

    .nav.open{
        left: 0;
        

    }

}

